--- a/documentation/ocp4devex/src/main/asciidoc/applicationbasics.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/applicationbasics.asciidoc
@@ -174,7 +174,7 @@ Ensure the ‘Create Route’ is checked
 
 Click 'Create'
 
-Click on the ‘ocpnode’ Application in the topology - click on the ‘cross’ icon to centralise the topology
+Click on the ‘ocpnode’ Application in the topology - click on the ‘cross’ icon situated at the bottom left of the Topology panel to centralise the topology
 
 *Now we have created a new Application grouping you will see two ''cloud'' groupings, labelled with the appropriate Application name you entered.*
 
