--- a/documentation/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
+++ b/documentation/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
@@ -10,19 +10,25 @@
 
 ==== Workshop Content
 
-*The application to be used in this workshop is a simple NodeJS REST interface. Version 1 exists on the master branch of the GIT Repository and verison 2 exists on the experimental branch.*
+*The application to be used in this workshop is a simple NodeJS REST interface. Version 1 exists on the master branch of the GIT Repository and version 2 exists on the experimental branch.*
 
 *To begin the creation of the application use the following commands in an command line window. :*
 
 ==== Creation of version 1
 
+[source,shell]
+----
 oc new-project master-slaveX 
+----
 
 *(Where X is your user number)*
 
+[source,shell]
+----
 oc new-app --name slave-app-v1-0  https://github.com/marrober/slave-node-app.git
 
 oc expose service slave-app-v1-0 --name="slave-app-route"
+----
 
 .What got created ?
 ****
@@ -33,8 +39,8 @@ It is important to understand the artefacts and content that are created by the 
 * A deployment configuration is created called slave-app-v1-0.
 * A replication controller is created associated with the application and the built objects. This defines the scaling of the application in terms of the number of pods and the deployment strategy (rolling or recreate). 
 * A build configuration is created to compile the application source code which is extracted from the associated GIT repository. 
-* The build configuration will create a buid instance which includes logs of the build process and a reference to the built image.
-* The newly created image is deployed as a runnning pod (or pods depending on the number of pods defined in the deployment configuration).
+* The build configuration will create a build instance which includes logs of the build process and a reference to the built image.
+* The newly created image is deployed as a running pod (or pods depending on the number of pods defined in the deployment configuration).
 * A service is created as part of the application creation process. The service endpoints will point to the pod(s) created by the build process. In the case of a rebuild and redeploy operation the service endpoints are updated to point to the new pods in accordance with the deployment strategy of the deployment configuration.
 * The service is then exposed external to the cluster by the creation of a route. The route has a fully qualified domain name for access from machines outside the cluster. 
 
@@ -54,10 +60,12 @@ oc get route slave-app-route -o jsonpath='{"http://"}{.spec.host}{"/ip\n"}'
 
 http://slave-app-route-master-slave.apps.cluster-xxxx-yyyy.xxxx-yyyy.example.opentlc.com/ip
 
-*To test the application use the command line window to issue a curl command to:
+*To test the application use the command line window to issue a curl command to:*
 
+[source,shell]
+----
 curl -k <url from the above command>
-
+----
 
 *The response should be as shown below (example ip address) :*
 
@@ -68,7 +76,10 @@ curl -k <url from the above command>
 
 *The development team now wants to introduce an experimental version 2 of the application and introduce it to the users in a number of different ways. The first action is to create the new build process for the experimental version using the command below.*
 
+[source,shell]
+----
 oc new-app --name slave-app-v2-0 https://github.com/marrober/slave-node-app.git#experimental
+----
 
 *Note the use of the #experimental branch identifier in the end of the GIT repository. This syntax cannot be used through the web interface to openshift so any requirements for non-standard GIT connectivity must be done through the command line interface. It is also possible to configure the source-2-image capability to reference a specific sub directory of the repository using the --context option.*
 
@@ -124,7 +135,10 @@ oc patch route/slave-app-route -p '{"spec":{"to":{"name":"slave-app-v2-0"}}}'
 
 *The details of the route patched by the above command are displayed by the command:*
 
+[source,shell]
+----
 oc get route/slave-app-route -o yaml
+----
 
 *The output of the above command is shown below, and the nested information from spec -> to -> name is easy to see.*
 
@@ -166,6 +180,7 @@ status:
 ----
 
 *Before moving to the A/B deployment strategy switch back to version v1 with the command:*
+
 [source,shell]
 ----
 oc patch route/slave-app-route -p '{"spec":{"to":{"name":"slave-app-v1-0"}}}'
@@ -183,19 +198,28 @@ image::deployment-strategies-3.png[Traffic routing]
 
 *To migrate 10% of traffic to version 2 execute the following command:*.
 
+[source,shell]
+----
 oc set route-backends slave-app-route slave-app-v1-0=90 slave-app-v2-0=10
+----
 
 *Switch back to the command window running the shell script and after a short wait you will see the occasional report from version 2.*
 
 *To balance the workload between the two versions execute the following command:*
 
+[source,shell]
+----
 oc set route-backends slave-app-route slave-app-v1-0=50 slave-app-v2-0=50
+----
 
 *Switch back to the command window running the shell script and after a short wait you will see a more even distribution of calls between versions 1 and 2.*
 
 *The details of the route patched by the above command are displayed by the command:*
 
+[source,shell]
+----
 oc get route/slave-app-route -o yaml
+----
 
 *A section of the output of the above command is included below, showing the split of traffic between versions 1 and 2.*
 
@@ -218,7 +242,10 @@ spec:
 
 *When satisfied that version 2 is working as required the following command will switch all traffic to that version and will remove the references to version 1 from the route.*
 
+[source,shell]
+----
 oc set route-backends slave-app-route slave-app-v1-0=0 slave-app-v2-0=100
+----
 
 ==== Cleaning up
 
