--- a/documentationbasic/README.asciidoc
+++ b/documentationbasic/README.asciidoc
@@ -1,8 +1,9 @@
-== Workshops
+== Basic Workshop
 
-This repo contains workshop4 materials for attendees for various workshops.
+This contains the asciidoc material to generate documentation for the basic module.
 
-To generate the documentation comment out the topics you *do not* need in the
-index.asciidoc and run the following command from the root directory:
+The basic module covers the core aspects of OCP4
+
+Run the following mvn command from the documentationbasic directory:
 
 mvn clean package -DfacilitatorName='[YOUR NAME]' -DfacilitatorEmail='[YOUR EMAIL]' -DfacilitatorTitle='[YOUR TITLE]' -DwebConsoleUrl='[ADD OCP CONSOLE URL]' -DterminalUrl='[ADD OCP TERMINAL WORKSHOP URL]'
