Changed the 'lies' of interest to the 'lines' of interest

--- a/documentationbasic/ocp4devex/src/main/asciidoc/healthprobes.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/healthprobes.asciidoc
@@ -320,7 +320,7 @@ subsets:
     protocol: TCP
 ----
 
-The lies of interest above are:
+The lines of interest above are:
 [source,shell]
 ----
 subsets:
