--- a/documentationbasic/ocp4devex/src/main/asciidoc/deployments.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/deployments.asciidoc
@@ -71,7 +71,7 @@ Click on the 'nodenews' dc
 
 Click on 'Environment'
 
-In ‘All Values from existing config maps’ select nodenewsconfig from the pulldown on the left and add nodenewsconfig as the prefix
+In ‘All Values from existing config maps’ select nodenewsconfig from the pulldown on the left and add nodenewsconfig as the prefix in the righthand textbox (labelled PREFIX (OPTIONAL) )
 
 Click 'Save'
 
@@ -88,6 +88,8 @@ In the Pod Details page click on 'Terminal'
 In the terminal type ‘env | grep nodenewsconfig’
 
 *Note that the env variables from the config map have been expressed within the Pod as env variables (with the nodenewsconfig prefixed)*
+
+image::deployment-5.png[Injected config map environment variables]
 
 Go back to the command line tab at {terminalUrl} and enter the following commands:
 
@@ -144,7 +146,7 @@ Save the deployment config.
 
 Click on 'Workloads/Pods'. Watch the new versions of the nodenews application deploy.
 
-When they finish deploying click on one of the Pods. Click on 'Terminal'.
+When they finish deploying click on one of the nodenews Pods. Click on 'Terminal'.
 
 In the terminal type:
 
@@ -232,13 +234,9 @@ Scale the Application up to four copies using the up arrow next to the Pod count
 
 Once the count has gone to 4 and all the Pods are indicated as healthy (the colour of the Pod ring is blue for all Pods) select Action/Start Rollout.
 
-Ignore the 404 (race condition) - click Back on the browser to go to the deployment config again
-
-Watch the colours of the Pods
+The DC panel will now render the results of the deployment.
 
 *Deployments can have one of two strategies. This example uses the 'Rolling' strategy which is designed for zero downtime deployments. It works but spinning up a single copy of the new Pod, and when that Pod reports as being healthy only then is one of the old Pods removed. This ensures that at all times the required number of replicas are running healthy with no downtime for the Application itself.*
-
-Click on 'Workloads/Deployment Configs', click on the nodenews DC again
 
 Click on 'Actions/Edit Deployment Config'
 
@@ -267,9 +265,7 @@ Click on 'Workloads/Deployment Configs', select nodenews dc
 
 Click on ‘Action/Start Rollout’
 
-Click back on the browser to go to the Deployment Configs/nodenews overview
-
-Watch the colour of the Pod ring
+Watch the colour of the Pod rings as the system carries out the deployment
 
 *In the case of a Recreate strategy the system ensures that NO copies of the old deployment are running simultaneously with the new ones. It deletes all the running Pods, irregardless of the required number of replicas, and when all Pods report as being fully deleted it will start spinning up the new copies. This is for a scenario when you must NOT have any users interacting with the old Application once the new one is deployed, such as a security flaw in the old Application*
 
