Updated 4.3 stuff for advanced, first drop

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -2,6 +2,7 @@
 {author} <{email}>
 
 include::intro.asciidoc[]
+include::prereq.asciidoc[]
 include::openshift-do-command-line.asciidoc[]
 include::openshift-pipelines-tekton.asciidoc[]
 include::camelk.asciidoc[]
