--- a/documentationadvanced/README.asciidoc
+++ b/documentationadvanced/README.asciidoc
@@ -7,3 +7,18 @@ The advanced module covers the extra technical components of OCP4 including Tekt
 Run the following mvn command from the documentationadvanced directory:
 
 mvn clean package -DfacilitatorName='[YOUR NAME]' -DfacilitatorEmail='[YOUR EMAIL]' -DfacilitatorTitle='[YOUR TITLE]' -DwebConsoleUrl='[ADD OCP CONSOLE URL]' -DterminalUrl='[ADD OCP TERMINAL WORKSHOP URL]'
+
+=== NOTE - the follow pre-requesites must be done *before* allowing attendees to use the course in self-paced mode
+
+There are a number of operators that need to be installed in the system for the various courses. In order to install these you must be logged on as a clutser-admin enabled user and apply the following steps:
+
+1: Installing the Pipeline Operator
+
+Go to Operators/OperatorHub
+In the search box type 'pipeline'
+Click on the 'OpenShift Pipelines Operator'
+Acknowledge the Community Warning
+Hit 'Install'
+Ensure the 'All Namespaces on the Cluster' option is selected
+Hit 'Subscribe'
+Once the deployment has completed the Pipeline operator is installed correctly
