--- a/documentationadvanced/README.asciidoc
+++ b/documentationadvanced/README.asciidoc
@@ -8,7 +8,7 @@ Run the following mvn command from the documentationadvanced directory:
 
 mvn clean package -DfacilitatorName='[YOUR NAME]' -DfacilitatorEmail='[YOUR EMAIL]' -DfacilitatorTitle='[YOUR TITLE]' -DwebConsoleUrl='[ADD OCP CONSOLE URL]' -DterminalUrl='[ADD OCP TERMINAL WORKSHOP URL]'
 
-=== NOTE - the follow pre-requesites must be done *before* allowing attendees to use the course in self-paced mode
+=== NOTE - the follow pre-requisites must be done *before* allowing attendees to use the course in self-paced mode
 
 There are a number of operators that need to be installed in the system for the various courses. In order to install these you must be logged on as a clutser-admin enabled user and apply the following steps:
 
